--- a/charity_donation/templates/register.html
+++ b/charity_donation/templates/register.html
@@ -5,7 +5,7 @@
       <nav class="container container--70">
         <ul class="nav--actions">
           <li><a href="{% url 'login' %}">Zaloguj</a></li>
-          <li class="highlighted"><a href="{% url register %}">Załóż konto</a></li>
+          <li class="highlighted"><a href="{% url 'register' %}">Załóż konto</a></li>
         </ul>
 
         <ul>
@@ -38,7 +38,7 @@
         </div>
 
         <div class="form-group form-group--buttons">
-          <a href="login.html" class="btn btn--without-border">Zaloguj się</a>
+          <a href="{% url 'login' %}" class="btn btn--without-border">Zaloguj się</a>
           <button class="btn" type="submit">Załóż konto</button>
         </div>
       </form>
