--- a/charity_donation/templates/base.html
+++ b/charity_donation/templates/base.html
@@ -9,6 +9,37 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
   </head>
   <body>
+  <header class="header--main-page">
+      <nav class="container container--70">
+        <ul class="nav--actions">
+          {% if user.is_authenticated %}
+          <li class="logged-user">
+            Witaj {{ user.username }}
+            <ul class="dropdown">
+              <li><a href="#">Profil</a></li>
+              <li><a href="#">Ustawienia</a></li>
+              <li><a href="{% url 'logout' %}">Wyloguj</a></li>
+            </ul>
+          </li>
+          {% else %}
+          <li><a href="{% url 'login' %}#login" class="btn btn--small btn--without-border">Zaloguj</a></li>
+          <li><a href="{% url 'register' %}#register" class="btn btn--small btn--highlighted">Załóż konto</a></li>
+          {% endif %}
+        </ul>
+
+        <ul>
+          <li><a href="{% url 'landing-page' %}" class="btn btn--without-border active">Start</a></li>
+          <li><a href="{% url 'landing-page' %}#steps" class="btn btn--without-border">O co chodzi?</a></li>
+          <li><a href="{% url 'landing-page' %}#about-us" class="btn btn--without-border">O nas</a></li>
+          <li><a href="{% url 'landing-page' %}#help" class="btn btn--without-border">Fundacje i organizacje</a></li>
+          <li><a href="{% url 'add-donation' %}" class="btn btn--without-border">Przekaż dary</a></li>
+          <li><a href="{% url 'landing-page' %}#contact" class="btn btn--without-border">Kontakt</a></li>
+        </ul>
+      </nav>
+      {% block header %}
+
+      {% endblock %}
+  </header>
     {% block content %}
 
 
