--- a/charity_donation/templates/index.html
+++ b/charity_donation/templates/index.html
@@ -1,22 +1,6 @@
 {% extends 'base.html' %}
-{% block content %}
 {% load static %}
-    <header class="header--main-page">
-      <nav class="container container--70">
-        <ul class="nav--actions">
-          <li><a href="{% url 'login' %}" class="btn btn--small btn--without-border">Zaloguj</a></li>
-          <li><a href="{% url 'register' %}" class="btn btn--small btn--highlighted">Załóż konto</a></li>
-        </ul>
-
-        <ul>
-          <li><a href="" class="btn btn--without-border active">Start</a></li>
-          <li><a href="#steps" class="btn btn--without-border">O co chodzi?</a></li>
-          <li><a href="#about-us" class="btn btn--without-border">O nas</a></li>
-          <li><a href="#help" class="btn btn--without-border">Fundacje i organizacje</a></li>
-          <li><a href="{% url 'add-donation' %}" class="btn btn--without-border">Przekaż dary</a></li>
-          <li><a href="#contact" class="btn btn--without-border">Kontakt</a></li>
-        </ul>
-      </nav>
+{% block header %}
 
       <div class="slogan container container--90">
         <div class="slogan--item">
@@ -26,7 +10,9 @@
           </h1>
         </div>
       </div>
-    </header>
+{% endblock %}
+{% block content %}
+
 
     <section id="stats" class="stats">
       <div class="container container--85">
