--- a/charity_donation/templates/login.html
+++ b/charity_donation/templates/login.html
@@ -1,26 +1,11 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-    <header>
-      <nav class="container container--70">
-        <ul class="nav--actions">
-          <li><a href="{% url 'login' %}">Zaloguj</a></li>
-          <li class="highlighted"><a href="{% url 'register' %}">Załóż konto</a></li>
-        </ul>
 
-        <ul>
-          <li><a href="{% url 'landing-page' %}">Start</a></li>
-          <li><a href="{% url 'landing-page' %}#steps">O co chodzi?</a></li>
-          <li><a href="{% url 'landing-page' %}#about-us">O nas</a></li>
-          <li><a href="{% url 'landing-page' %}#help">Fundacje i organizacje</a></li>
-          <li><a href="{% url 'landing-page' %}#contact">Kontakt</a></li>
-        </ul>
-      </nav>
-    </header>
-
-    <section class="login-page">
+    <section id="login" class="login-page">
       <h2>Zaloguj się</h2>
-      <form>
+      <form method="post">
+        {% csrf_token %}
         <div class="form-group">
           <input type="email" name="email" placeholder="Email" />
         </div>
