--- a/charity_donation/templates/register.html
+++ b/charity_donation/templates/register.html
@@ -1,24 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-    <header>
-      <nav class="container container--70">
-        <ul class="nav--actions">
-          <li><a href="{% url 'login' %}">Zaloguj</a></li>
-          <li class="highlighted"><a href="{% url 'register' %}">Załóż konto</a></li>
-        </ul>
 
-        <ul>
-          <li><a href="{% url 'landing-page' %}">Start</a></li>
-          <li><a href="{% url 'landing-page' %}#steps">O co chodzi?</a></li>
-          <li><a href="{% url 'landing-page' %}#about-us">O nas</a></li>
-          <li><a href="{% url 'landing-page' %}#help">Fundacje i organizacje</a></li>
-          <li><a href="{% url 'landing-page' %}#contact">Kontakt</a></li>
-        </ul>
-      </nav>
-    </header>
-
-    <section class="login-page">
+    <section id="register" class="login-page">
       <h2>Załóż konto</h2>
       <form method="post">
         {% csrf_token %}
