--- a/charity_donation/templates/index.html
+++ b/charity_donation/templates/index.html
@@ -109,8 +109,7 @@
       <!-- SLIDE 2 -->
       <div class="help--slides" data-id="2">
         <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic officiis mollitia dolor, neque aspernatur accusamus debitis. Ducimus, officia. Quia, sunt illum! Non iste placeat ab ipsum alias
-          quos suscipit corporis!
+          W naszej bazie znajdziesz listę zweryfikowanych Organizacji, z którymi współpracujemy. Możesz sprawdzić czym się zajmują, komu pomagają i czego potrzebują.
         </p>
         <ul class="help--slides-items">
           {% for charity in charities %}
@@ -167,7 +166,10 @@
 
       <!-- SLIDE 3 -->
       <div class="help--slides" data-id="3">
-        <p>Lorem ipsum dolor sit amet, his ocurreret persequeris ea, ad utinam laudem duo. Verterem adipisci partiendo eos ne, ea his reque quaeque recteque, ne quo lobortis intellegam.</p>
+        <p>
+            W naszej bazie znajdziesz listę zweryfikowanych Zbiórek. Możesz sprawdzić czym
+            się zajmują, komu pomagają i czego potrzebują.
+        </p>
         <ul class="help--slides-items">
           {% for charity in charities %}
             {% if charity.type == '3' %}
