--- a/charity_donation/templates/base.html
+++ b/charity_donation/templates/base.html
@@ -68,7 +68,7 @@
         </div>
       </div>
     </footer>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="{% static 'js/app.js' %}"></script>
   </body>
 </html>
