--- a/charity_donation/templates/form.html
+++ b/charity_donation/templates/form.html
@@ -62,7 +62,7 @@
             {% for category in categories %}
             <div class="form-group form-group--checkbox">
               <label>
-                <input type="checkbox" name="categories" value="{{ category.id }}" />
+                <input type="checkbox" class="first-step" name="categories" value="{{ category.id }}" />
                 <span class="checkbox"></span>
                 <span class="description">{{ category.name }}</span>
               </label>
@@ -70,7 +70,7 @@
             {% endfor %}
 
             <div class="form-group form-group--buttons">
-              <button type="button" class="btn next-step">Dalej</button>
+              <button type="button" id="first-button" class="btn next-step">Dalej</button>
             </div>
           </div>
 
@@ -97,7 +97,7 @@
           <div data-step="3">
             <h3>Wybierz organizacje, której chcesz pomóc:</h3>
 
-            <div class="form-group form-group--checkbox">
+            <div id="third-step" class="form-group form-group--checkbox">
               <label>
                 <input type="radio" name="organization" value="old" />
                 <span class="checkbox radio"></span>
