--- a/charity_donation/templates/form.html
+++ b/charity_donation/templates/form.html
@@ -94,10 +94,10 @@
 
 
           <!-- STEP 3 -->
-          <div data-step="3">
+          <div id="third-step" data-step="3">
             <h3>Wybierz organizacje, której chcesz pomóc:</h3>
 
-            <div id="third-step" class="form-group form-group--checkbox">
+            <div class="form-group form-group--checkbox">
               <label>
                 <input type="radio" name="organization" value="old" />
                 <span class="checkbox radio"></span>
