--- a/charity_donation/templates/user_profile.html
+++ b/charity_donation/templates/user_profile.html
@@ -12,15 +12,33 @@
     <div class="col">
         <ul><h1>Przekazane dary:</h1>
             {% for donation in donations %}
-            <li>
-                <div>
-                    <h3>Nazwa instytucji: {{ donation.institution.name }},</h3>
-                    <h3>Ilość przekazanych worków: {{ donation.quantity }},</h3>
-                    <h3>Kategorie przekazanych darów: {% for don in donation.categories.all %} {{ don.name }}, {% endfor %}</h3>
-                    <h3>Data odbioru: {{ donation.pick_up_date }},</h3>
-                    <h3>Godzina odbioru: {{ donation.pick_up_time }}.</h3>
-                </div>
-            </li>
+                {% if donation.is_taken is False %}
+                    <li>
+                        <div class="donation" data-divdonationid="{{ donation.id }}">
+                            <h3>Nazwa instytucji: {{ donation.institution.name }},</h3>
+                            <h3>Ilość przekazanych worków: {{ donation.quantity }},</h3>
+                            <h3>Kategorie przekazanych darów: {% for don in donation.categories.all %} {{ don.name }}, {% endfor %}</h3>
+                            <h3>Data odbioru: {{ donation.pick_up_date }},</h3>
+                            <h3>Godzina odbioru: {{ donation.pick_up_time }}.</h3>
+                            <h3>Odebrany: <label><input type="checkbox" name="is_taken" data-donationid="{{ donation.id }}"  class="is_taken"></label></h3>
+                        </div>
+                    </li>
+                {% endif %}
+            {% endfor %}
+            <br /><br />
+            {% for donation in donations %}
+                {% if donation.is_taken is True %}
+                    <li>
+                        <div class="donation" data-divdonationid="{{ donation.id }}">
+                            <h3>Nazwa instytucji: {{ donation.institution.name }},</h3>
+                            <h3>Ilość przekazanych worków: {{ donation.quantity }},</h3>
+                            <h3>Kategorie przekazanych darów: {% for don in donation.categories.all %} {{ don.name }}, {% endfor %}</h3>
+                            <h3>Data odbioru: {{ donation.pick_up_date }},</h3>
+                            <h3>Godzina odbioru: {{ donation.pick_up_time }}.</h3>
+                            <h3>Odebrany: <label><input type="checkbox" name="is_taken" data-donationid="{{ donation.id }}"  class="is_taken"></label></h3>
+                        </div>
+                    </li>
+                {% endif %}
             {% endfor %}
         </ul>
     </div>
