--- a/charity_donation/templates/base.html
+++ b/charity_donation/templates/base.html
@@ -17,7 +17,7 @@
             Witaj {{ user.username }}
             <ul class="dropdown">
               <li><a href="{% url 'user-profile' %}">Profil</a></li>
-              <li><a href="#">Ustawienia</a></li>
+              <li><a href="{% url 'edit-user' %}">Ustawienia</a></li>
               {% if user.is_superuser %}
                   <li><a href="{% url 'admin:index' %}">Panel administracyjny</a></li>
               {% endif %}
@@ -52,10 +52,10 @@
         <h2>Skontaktuj się z nami</h2>
         <h3>Formularz kontaktowy</h3>
         <form class="form--contact">
-          <div class="form-group form-group--50"><input type="text" name="name" placeholder="Imię" /></div>
-          <div class="form-group form-group--50"><input type="text" name="surname" placeholder="Nazwisko" /></div>
+            <div class="form-group form-group--50"><label><input type="text" name="name" placeholder="Imię" /></label></div>
+            <div class="form-group form-group--50"><label><input type="text" name="surname" placeholder="Nazwisko" /></label></div>
 
-          <div class="form-group"><textarea name="message" placeholder="Wiadomość" rows="1"></textarea></div>
+            <div class="form-group"><label><textarea name="message" placeholder="Wiadomość" rows="1"></textarea></label></div>
 
           <button class="btn" type="submit">Wyślij</button>
         </form>
