--- a/charity_donation/templates/edit_user.html
+++ b/charity_donation/templates/edit_user.html
@@ -1,21 +1,22 @@
 {% extends 'base.html' %}
 {% block content %}
 <section class="login-page">
+    <h3 class="h3_font">Edytuj dane</h3>
     <form method="post">
         {% csrf_token %}
         <div class="form-group">
-            <label>Imię
-                <input type="text" name="first-name" />
+            <label>
+                <input type="text" name="first-name" placeholder="Imię" />
             </label>
         </div>
         <div class="form-group">
-            <label>Nazwisko
-                <input type="text" name="last-name" />
+            <label>
+                <input type="text" name="last-name" placeholder="Nazwisko" />
             </label>
         </div>
         <div class="form-group">
-            <label>E-mail
-                <input type="text" name="email" />
+            <label>
+                <input type="text" name="email" placeholder="E-mail" />
             </label>
         </div>
         <div class="form-group">
@@ -25,22 +26,22 @@
         </div>
     </form>
     <br /><br />
-    <h3>Zmiana hasła</h3>
+    <h3 class="h3_font">Zmiana hasła</h3>
     <form method="post">
         {% csrf_token %}
         <div class="form-group">
-            <label>Stare hasło
-                <input type="text" name="old_password" />
+            <label>
+                <input type="text" name="old_password" placeholder="Stare hasło" />
             </label>
         </div>
         <div class="form-group">
-            <label>Nowe hasło
-                <input type="text" name="new_password1" />
+            <label>
+                <input type="text" name="new_password1" placeholder="Nowe hasło" />
             </label>
         </div>
         <div class="form-group">
-            <label>Powtórz nowe hasło
-                <input type="text" name="new_password2" />
+            <label>
+                <input type="text" name="new_password2" placeholder="Powtórz nowe hasło" />
             </label>
         </div>
         <div class="form-group">
